--- a/pages/logros-index.html
+++ b/pages/logros-index.html
@@ -9,27 +9,32 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
 
     <!--aca comienza el encabezado-->
-
     <header>
 
         <img src="../media/Logo-sumo-1.jpg" alt="sumo" class="Logo-sumo-1">
 
         <nav>
 
-            <div class="navegacion">
 
-                    <a class="botones primer-boton" href="../index.html">inicio</a>
-                    <a class="botones segundo-boton" href="../pages/sobre-nosotros-index.html">sobre nosotros</a>
-                    <a class="botones tercer-boton" href="../pages/integrantes-index.html">integrantes</a>
-                    <a class="botones cuarto-boton" href="../pages/logros-index.html">logros</a>
-                    <a class="botones quinto-boton" href="../pages/anecdotas-index.html">anecdotas</a>
-                  
+            <div class="navegacion menu-responsive">
+
+                <a class="botones primer-boton" href="../index.html">inicio</a>
+
+                <a class="botones segundo-boton" href="../pages/sobre-nosotros-index.html">sobre
+                    nosotros</a>
+
+                <a class="botones tercer-boton" href="../pages/integrantes-index.html">integrantes</a>
+
+                <a class="botones cuarto-boton" href="../pages/logros-index.html">logros</a>
+
+                <a class="botones quinto-boton" href="../pages/anecdotas-index.html">anecdotas</a>
+
             </div>
 
         </nav>
@@ -39,9 +44,7 @@
 
     <hr>
 
-    <div class="titulo-padre">
-        <h1 class="titulo-hijo">logros</h1>
-    </div>
+        <h1 class="titulo-padre">logros</h1>
 
     <!--aca empieza main-->
     <main>
