--- a/pages/integrantes-index.html
+++ b/pages/integrantes-index.html
@@ -10,6 +10,26 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
+    <meta name="description" content="nosotros somos la pagina oficial de sumo, una institucion sin fines de lucro que tiene como
+    objetivo rememorar este historico grupo, aqui encontraras todo lo que quieres saber sobre ellos,
+    una banda inactiva pero que sigue presente en nuestros corazones">
+    <meta name="keywords"
+        content="sumo, luca prodan, after chabon, divididos por la felicidad, llegando los monos, german daffunchio, diego arnedo, roberto pettinato, alberto troglio,alejandro sokol, rock nacional">
+    <!--open graph-->
+    <meta property="og:type" content="sumo" />
+
+    <!--titulo-->
+    <meta property="og:title" content="pagina oficial de sumo | lautaro martin villar" />
+    <!--titulo-->
+
+    <!--url-->
+    <meta property="og:url" content="https://pagina-oficial-de-sumo.000webhostapp.com/" />
+    <!--url-->
+
+    <!--imagen-->
+    <meta property="og:image" content="https://acortar.link/KiUCNz" />
+    <!--imagen-->
+    
 </head>
 
 <body>
