--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!--titulo-->
 
     <!--url-->
-    <meta property="og:url" content="https://pagina-oficial-de-sumo.000webhostapp.com/" />
+    <meta property="og:url" content="pagina-oficial-sumo.000webhostapp.com" />
     <!--url-->
 
     <!--imagen-->
