--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
             <div class="navegacion menu-responsive">
 
-                <a class="botones primer-boton" href="./index.html">inicio</a>
+               <!--<a class="botones primer-boton" href="./index.html">inicio</a>--> 
 
                 <a class="botones segundo-boton" href="./pages/sobre-nosotros-index.html">sobre
                     nosotros</a>
