--- a/pages/anecdotas-index.html
+++ b/pages/anecdotas-index.html
@@ -52,7 +52,7 @@
 
                 <a class="botones cuarto-boton" href="../pages/logros-index.html">logros</a>
 
-                <a class="botones quinto-boton" href="../pages/anecdotas-index.html">anecdotas</a>
+               <!--<a class="botones quinto-boton" href="../pages/anecdotas-index.html">anecdotas</a>--> 
 
             </div>
 
