--- a/pages/integrantes-index.html
+++ b/pages/integrantes-index.html
@@ -29,7 +29,7 @@
     <!--imagen-->
     <meta property="og:image" content="https://acortar.link/KiUCNz" />
     <!--imagen-->
-    
+
 </head>
 
 <body>
@@ -49,7 +49,7 @@
                 <a class="botones segundo-boton" href="../pages/sobre-nosotros-index.html">sobre
                     nosotros</a>
 
-                <a class="botones tercer-boton" href="../pages/integrantes-index.html">integrantes</a>
+                <!--<a class="botones tercer-boton" href="../pages/integrantes-index.html">integrantes</a>-->
 
                 <a class="botones cuarto-boton" href="../pages/logros-index.html">logros</a>
 
@@ -64,7 +64,7 @@
 
     <hr>
 
-        <h1 class="titulo-padre">integrantes</h1>
+    <h1 class="titulo-padre">integrantes</h1>
 
     <!--aca empieza main-->
     <main>
@@ -80,24 +80,24 @@
 
             <ul>
 
-            <li class="lista-integrantes">voz: luca prodan † </li>
-            <li class="lista-integrantes">guitarra: german daffuncio</li>
-            <li class="lista-integrantes">bajo: diego arnedo</li>
-            <li class="lista-integrantes">saxofon: roberto pettinato</li>
-            <li class="lista-integrantes">bateria: alberto troglio</li>
-            <li class="lista-integrantes">bajo y bateria: alejandro sokol † </li>
+                <li class="lista-integrantes">voz: luca prodan † </li>
+                <li class="lista-integrantes">guitarra: german daffuncio</li>
+                <li class="lista-integrantes">bajo: diego arnedo</li>
+                <li class="lista-integrantes">saxofon: roberto pettinato</li>
+                <li class="lista-integrantes">bateria: alberto troglio</li>
+                <li class="lista-integrantes">bajo y bateria: alejandro sokol † </li>
 
             </ul>
 
             <h4 class="titulo-historia"> miembros anteriores</h4>
 
-            <ul> 
+            <ul>
 
-            <li class="lista-integrantes">guitarra: ricardo curtet</li>
-            <li class="lista-integrantes">bateria: stephanie nuttal</li>
+                <li class="lista-integrantes">guitarra: ricardo curtet</li>
+                <li class="lista-integrantes">bateria: stephanie nuttal</li>
 
             </ul>
-            
+
         </aside>
         <!-- aca termina el aside-->
 
