--- a/pages/logros-index.html
+++ b/pages/logros-index.html
@@ -51,7 +51,7 @@
 
                 <a class="botones tercer-boton" href="../pages/integrantes-index.html">integrantes</a>
 
-                <a class="botones cuarto-boton" href="../pages/logros-index.html">logros</a>
+             <!--<a class="botones cuarto-boton" href="../pages/logros-index.html">logros</a>-->    
 
                 <a class="botones quinto-boton" href="../pages/anecdotas-index.html">anecdotas</a>
 
