--- a/pages/sobre-nosotros-index.html
+++ b/pages/sobre-nosotros-index.html
@@ -47,8 +47,8 @@
 
                 <a class="botones primer-boton" href="../index.html">inicio</a>
 
-                <a class="botones segundo-boton" href="../pages/sobre-nosotros-index.html">sobre
-                    nosotros</a>
+               <!--<a class="botones segundo-boton" href="../pages/sobre-nosotros-index.html">sobre
+                    nosotros</a>--> 
 
                 <a class="botones tercer-boton" href="../pages/integrantes-index.html">integrantes</a>
 
