navbar, mayusculas y link footer

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pagina oficial de sumo</title>
+    <title>Pagina oficial de Sumo</title>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
@@ -19,7 +19,7 @@
     <meta property="og:type" content="sumo" />
 
     <!--titulo-->
-    <meta property="og:title" content="pagina oficial de sumo | lautaro martin villar" />
+    <meta property="og:title" content="pagina oficial de Sumo | Lautaro Martin Villar" />
     <!--titulo-->
 
     <!--url-->
@@ -46,14 +46,14 @@
 
                <!--<a class="botones primer-boton" href="./index.html">inicio</a>--> 
 
-                <a class="botones segundo-boton" href="./pages/sobre-nosotros-index.html">sobre
+                <a class="botones segundo-boton" href="./pages/sobre-nosotros-index.html">Sobre
                     nosotros</a>
 
-                <a class="botones tercer-boton" href="./pages/integrantes-index.html">integrantes</a>
+                <a class="botones tercer-boton" href="./pages/integrantes-index.html">Integrantes</a>
 
-                <a class="botones cuarto-boton" href="./pages/logros-index.html">logros</a>
+                <a class="botones cuarto-boton" href="./pages/logros-index.html">Logros</a>
 
-                <a class="botones quinto-boton" href="./pages/anecdotas-index.html">anecdotas</a>
+                <a class="botones quinto-boton" href="./pages/anecdotas-index.html">Anecdotas</a>
 
             </div>
 
@@ -69,14 +69,14 @@
     <aside>
 
         <hr>
-        <h1 class="titulo-padre">bienvenidos a la pagina oficial de sumo</h1>
+        <h1 class="titulo-padre">Bienvenidos a la pagina oficial de Sumo</h1>
         <hr>
 
 
         <a href="https://es.wikipedia.org/wiki/Sumo_(banda)#/media/Archivo:Sumo_1985.jpg" target="_blank">
             <img src="./media/images.jpg" class="logo-sumo-2" alt="banda-sumo"></a>
 
-        <h2 class="titulo-historia">un poco de su historia</h2>
+        <h2 class="titulo-historia">Un poco de su historia</h2>
         <br>
 
         <div class="descripcion">
@@ -139,7 +139,7 @@
         </div>
         <br>
         <!--titulo-->
-        <h2 class="titulo-discos">sus tres discos</h2>
+        <h2 class="titulo-discos">Sus tres discos</h2>
         <!--titulo-->
 
     </aside>
@@ -151,7 +151,7 @@
         <!--primer disco-->
         <div class="primer-disco">
             <h4>
-                divididos por la felicidad
+                Divididos por la felicidad
             </h4>
             <br>
             <a href="https://open.spotify.com/album/0iMPnRq7PL82Zrah0gTQBR" target="_blank"> <img
@@ -191,7 +191,7 @@
         <div class="segundo-disco">
 
             <h4>
-                llegando los monos
+                Llegando los monos
             </h4>
             <br>
             <a href="https://open.spotify.com/album/2kn0EF90FuahMHtPpwVsX4" target="_blank"><img
@@ -220,7 +220,7 @@
         <!--tercer disco-->
         <div class="tercer-disco">
             <h4>
-                after chabon
+                After chabon
             </h4>
             <br>
             <a href="https://open.spotify.com/album/721cIV4PIWZSK5nZaYPvFy" target="_blank"> <img
@@ -271,7 +271,7 @@
         <!-- Copyright -->
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
             © 2022 Copyright:
-            <a class="text-white" href="http://127.0.0.1:5500/index.html">www.pagina/oficial/sumo.com</a>
+            <a class="text-white" href="http://127.0.0.1:5500/index.html">https://lautaro-villar.github.io/segunda-entrega/</a>
         </div>
         <!-- Copyright -->
 
