--- a/pages/logros-index.html
+++ b/pages/logros-index.html
@@ -44,16 +44,16 @@
 
             <div class="navegacion menu-responsive">
 
-                <a class="botones primer-boton" href="../index.html">inicio</a>
+                <a class="botones primer-boton" href="../index.html">Inicio</a>
 
-                <a class="botones segundo-boton" href="../pages/sobre-nosotros-index.html">sobre
+                <a class="botones segundo-boton" href="../pages/sobre-nosotros-index.html">Sobre
                     nosotros</a>
 
-                <a class="botones tercer-boton" href="../pages/integrantes-index.html">integrantes</a>
+                <a class="botones tercer-boton" href="../pages/integrantes-index.html">Integrantes</a>
 
              <!--<a class="botones cuarto-boton" href="../pages/logros-index.html">logros</a>-->    
 
-                <a class="botones quinto-boton" href="../pages/anecdotas-index.html">anecdotas</a>
+                <a class="botones quinto-boton" href="../pages/anecdotas-index.html">Anecdotas</a>
 
             </div>
 
@@ -64,7 +64,7 @@
 
     <hr>
 
-        <h1 class="titulo-padre">logros</h1>
+        <h1 class="titulo-padre">Logros</h1>
 
     <!--aca empieza main-->
     <main>
@@ -79,7 +79,7 @@
                 <img src="../media/logros.jpg" class="logo-sumo-2" alt="banda-sumo">
             </div>
 
-            <h2 class="titulo-historia">logros de la banda</h2>
+            <h2 class="titulo-historia">Logros de la banda</h2>
 
             <br>
 
@@ -134,7 +134,7 @@
         <!-- Copyright -->
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
             © 2022 Copyright:
-            <a class="text-white" href="http://127.0.0.1:5500/index.html">www.pagina/oficial/sumo.com</a>
+            <a class="text-white" href="http://127.0.0.1:5500/index.html">https://lautaro-villar.github.io/segunda-entrega/</a>
         </div>
         <!-- Copyright -->
 
