--- a/pages/sobre-nosotros-index.html
+++ b/pages/sobre-nosotros-index.html
@@ -45,16 +45,16 @@
 
             <div class="navegacion menu-responsive">
 
-                <a class="botones primer-boton" href="../index.html">inicio</a>
+                <a class="botones primer-boton" href="../index.html">Inicio</a>
 
                <!--<a class="botones segundo-boton" href="../pages/sobre-nosotros-index.html">sobre
                     nosotros</a>--> 
 
-                <a class="botones tercer-boton" href="../pages/integrantes-index.html">integrantes</a>
+                <a class="botones tercer-boton" href="../pages/integrantes-index.html">Integrantes</a>
 
-                <a class="botones cuarto-boton" href="../pages/logros-index.html">logros</a>
+                <a class="botones cuarto-boton" href="../pages/logros-index.html">Logros</a>
 
-                <a class="botones quinto-boton" href="../pages/anecdotas-index.html">anecdotas</a>
+                <a class="botones quinto-boton" href="../pages/anecdotas-index.html">Anecdotas</a>
 
             </div>
 
@@ -64,7 +64,7 @@
     <!--aca termina el encabezado-->
 
     <hr>
-    <h1 class="titulo-padre">bienvenidos!</h1>
+    <h1 class="titulo-padre">Bienvenidos!</h1>
     </div>
 
     <!--aca empieza main-->
@@ -78,16 +78,16 @@
             <div class="imagen-aside">
                 <img src="../media/nosotros.jpg" class="logo-sumo-2" alt="banda-sumo">
 
-                <h2 class="titulo-historia">quienes somos?</h2>
+                <h2 class="titulo-historia">Quienes somos?</h2>
             </div>
 
-            <p class="descripcion">nosotros somos la pagina oficial de sumo, una institucion sin fines de lucro que
+            <p class="descripcion">Nosotros somos la pagina oficial de sumo, una institucion sin fines de lucro que
                 tiene como
                 objetivo rememorar este historico grupo, aqui encontraras todo lo que quieres saber sobre ellos,
                 una banda inactiva pero que sigue presente en nuestros corazones
-            <p class="descripcion">#lucaNOTdead
-            <p class="descripcion">#dividos?
-            <p class="descripcion">#las pelotas!</p>
+            <p class="descripcion">#LucaNOTdead
+            <p class="descripcion">#Dividos?
+            <p class="descripcion">#Las pelotas!</p>
 
         </aside>
         <!-- aca termina el aside-->
@@ -114,7 +114,7 @@
         <!-- Copyright -->
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
             © 2022 Copyright:
-            <a class="text-white" href="http://127.0.0.1:5500/index.html">www.pagina/oficial/sumo.com</a>
+            <a class="text-white" href="http://127.0.0.1:5500/index.html">https://lautaro-villar.github.io/segunda-entrega/</a>
         </div>
         <!-- Copyright -->
 
