--- a/pages/anecdotas-index.html
+++ b/pages/anecdotas-index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>anecdotas</title>
+    <title>Anecdotas</title>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
@@ -43,14 +43,14 @@
 
             <div class="navegacion menu-responsive">
 
-                <a class="botones primer-boton" href="../index.html">inicio</a>
+                <a class="botones primer-boton" href="../index.html">Inicio</a>
 
-                <a class="botones segundo-boton" href="../pages/sobre-nosotros-index.html">sobre
+                <a class="botones segundo-boton" href="../pages/sobre-nosotros-index.html">Sobre
                     nosotros</a>
 
-                <a class="botones tercer-boton" href="../pages/integrantes-index.html">integrantes</a>
+                <a class="botones tercer-boton" href="../pages/integrantes-index.html">Integrantes</a>
 
-                <a class="botones cuarto-boton" href="../pages/logros-index.html">logros</a>
+                <a class="botones cuarto-boton" href="../pages/logros-index.html">Logros</a>
 
                <!--<a class="botones quinto-boton" href="../pages/anecdotas-index.html">anecdotas</a>--> 
 
@@ -64,7 +64,7 @@
     <hr>
 
      
-        <h1 class="titulo-padre">anecdotas</h1>
+        <h1 class="titulo-padre">Anecdotas</h1>
     
 
     <!--aca empieza main-->
@@ -80,7 +80,7 @@
                     <img src="../media/anecdotas.jpg"
                         class="logo-sumo-2" alt="banda-sumo">
 
-                    <h2 class="titulo-historia">anecdotas</h2>
+                    <h2 class="titulo-historia">Anecdotas</h2>
                     <br>
                 </div>
                 <div class="descripcion">
@@ -164,9 +164,9 @@
             </ul>
         </nav>
         <!-- Copyright -->
-        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+        <div class="text-center p-3" style="background-color:  rgba(0, 0, 0, 0.2);"> 
             © 2022 Copyright:
-            <a class="text-white" href="http://127.0.0.1:5500/index.html">www.pagina/oficial/sumo.com</a>
+            <a class="text-white" href="http://127.0.0.1:5500/index.html">https://lautaro-villar.github.io/segunda-entrega/</a>
         </div>
         <!-- Copyright -->
     </footer>
