--- a/pages/integrantes-index.html
+++ b/pages/integrantes-index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>integrantes</title>
+    <title>Integrantes</title>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
@@ -44,16 +44,16 @@
 
             <div class="navegacion menu-responsive">
 
-                <a class="botones primer-boton" href="../index.html">inicio</a>
+                <a class="botones primer-boton" href="../index.html">Inicio</a>
 
-                <a class="botones segundo-boton" href="../pages/sobre-nosotros-index.html">sobre
+                <a class="botones segundo-boton" href="../pages/sobre-nosotros-index.html">Sobre
                     nosotros</a>
 
                 <!--<a class="botones tercer-boton" href="../pages/integrantes-index.html">integrantes</a>-->
 
-                <a class="botones cuarto-boton" href="../pages/logros-index.html">logros</a>
+                <a class="botones cuarto-boton" href="../pages/logros-index.html">Logros</a>
 
-                <a class="botones quinto-boton" href="../pages/anecdotas-index.html">anecdotas</a>
+                <a class="botones quinto-boton" href="../pages/anecdotas-index.html">Anecdotas</a>
 
             </div>
 
@@ -64,7 +64,7 @@
 
     <hr>
 
-    <h1 class="titulo-padre">integrantes</h1>
+    <h1 class="titulo-padre">Integrantes</h1>
 
     <!--aca empieza main-->
     <main>
@@ -76,25 +76,25 @@
 
             <img src="../media/integrantes.png" class="logo-sumo-2" alt="banda-sumo">
 
-            <h2 class="titulo-historia">miembros:</h2>
+            <h2 class="titulo-historia">Miembros:</h2>
 
             <ul>
 
-                <li class="lista-integrantes">voz: luca prodan † </li>
-                <li class="lista-integrantes">guitarra: german daffuncio</li>
-                <li class="lista-integrantes">bajo: diego arnedo</li>
-                <li class="lista-integrantes">saxofon: roberto pettinato</li>
-                <li class="lista-integrantes">bateria: alberto troglio</li>
-                <li class="lista-integrantes">bajo y bateria: alejandro sokol † </li>
+                <li class="lista-integrantes">Voz: Luca Prodan † </li>
+                <li class="lista-integrantes">Guitarra: German Daffuncio</li>
+                <li class="lista-integrantes">Bajo: Diego Arnedo</li>
+                <li class="lista-integrantes">Saxofon: Roberto Pettinato</li>
+                <li class="lista-integrantes">Bateria: Alberto Troglio</li>
+                <li class="lista-integrantes">Bajo y bateria: Alejandro Sokol † </li>
 
             </ul>
 
-            <h4 class="titulo-historia"> miembros anteriores</h4>
+            <h4 class="titulo-historia"> Miembros anteriores</h4>
 
             <ul>
 
-                <li class="lista-integrantes">guitarra: ricardo curtet</li>
-                <li class="lista-integrantes">bateria: stephanie nuttal</li>
+                <li class="lista-integrantes">Guitarra: Ricardo Curtet</li>
+                <li class="lista-integrantes">Bateria: Stephanie Nuttal</li>
 
             </ul>
 
@@ -124,7 +124,7 @@
         <!-- Copyright -->
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
             © 2022 Copyright:
-            <a class="text-white" href="http://127.0.0.1:5500/index.html">www.pagina/oficial/sumo.com</a>
+            <a class="text-white" href="http://127.0.0.1:5500/index.html">https://lautaro-villar.github.io/segunda-entrega/</a>
         </div>
         <!-- Copyright -->
     </footer>
