color-hover-navbar(black or white) y link del footer

--- a/pages/logros-index.html
+++ b/pages/logros-index.html
@@ -51,7 +51,7 @@
 
                 <a class="botones tercer-boton" href="../pages/integrantes-index.html">Integrantes</a>
 
-             <!--<a class="botones cuarto-boton" href="../pages/logros-index.html">logros</a>-->    
+             <!-- <a class="botones cuarto-boton" href="../pages/logros-index.html">Logros</a> -->    
 
                 <a class="botones quinto-boton" href="../pages/anecdotas-index.html">Anecdotas</a>
 
