--- a/pages/integrantes-index.html
+++ b/pages/integrantes-index.html
@@ -49,7 +49,7 @@
                 <a class="botones segundo-boton" href="../pages/sobre-nosotros-index.html">Sobre
                     nosotros</a>
 
-                <!--<a class="botones tercer-boton" href="../pages/integrantes-index.html">integrantes</a>-->
+                <!-- <a class="botones tercer-boton" href="../pages/integrantes-index.html">Integrantes</a> -->
 
                 <a class="botones cuarto-boton" href="../pages/logros-index.html">Logros</a>
 
