--- a/pages/sobre-nosotros-index.html
+++ b/pages/sobre-nosotros-index.html
@@ -114,7 +114,7 @@
         <!-- Copyright -->
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
             © 2022 Copyright:
-            <a class="text-white" href="http://127.0.0.1:5500/index.html">https://lautaro-villar.github.io/segunda-entrega/</a>
+            <a class="text-white" href="https://lautaro-villar.github.io/segunda-entrega/">https://Pagina-oficial-de-Sumo/</a>
         </div>
         <!-- Copyright -->
 
